[project]
name = "social-media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "databases[sqlite]>=0.9.0",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
